--- a/other_files/EXAMPLE_EVALUATE6.yaml
+++ b/other_files/EXAMPLE_EVALUATE6.yaml
@@ -8,7 +8,7 @@ likelihood:
     #data_file: lsst_y1_M1_GGL0.05.dataset   # 705 non-masked elements  (EE2 delta chi^2 ~ 11.8)
     #data_file: lsst_y1_M2_GGL0.05.dataset  # 600 non-masked elements  (EE2 delta chi^2 ~ 6.7)
     #data_file: lsst_y1_M3_GGL0.05.dataset  # 495 non-masked elements  (EE2 delta chi^2 ~ 3.2)
-    data_file: lsst_y1_M4_GGL0.05.dataset  # 405 non-masked elements  (EE2 delta chi^2 ~ 1.4)
+    data_file: lsst_emu_M4_GGL0.05.dataset  # 405 non-masked elements  (EE2 delta chi^2 ~ 1.4)
     #data_file: lsst_y1_M5_GGL0.05.dataset  # 315 non-masked elements  (EE2 delta chi^2 ~ 0.5)
     #data_file: lsst_y1_M6_GGL0.05.dataset  # 780 non-masked elements  (EE2 delta chi^2 ~ 12.96)
   
